syntax = "proto3";

package user;

import "common.proto";
import "address.proto";

message User {
  int32 id = 1;
  string name = 2;
  string phone = 3;
  string email = 4;
  int64 birthday = 5;
  string city = 6;
  string img = 7;
  Address address = 8;
}

// 获取当前用户信息
// [post] /fetchUser

message FetchUserReq {
  int32 user_id = 1;
}

message FetchUserResp {
  ResultType result_type = 1;
  User user = 2;
}

// 更新当前用户信息
// [post] /updateUser

message UpdateUserReq {
  enum Type {
    NAME = 0;
    PHONE = 1;
    EMAIL = 2;
    BIRTHDAY = 3;
    CITY = 4;
    IMGAE = 5;
  }

  int32 user_id = 1;
  Type type = 2;
  string value = 3;
}

message UpdateUserResp {
  ResultType result_type = 1;
}

// 登录
// [post] /fetchLoginStatus

message LoginReq {
  enum Type {
    PASSWORD = 0;
    VERIFICATION = 1;
  }
  
  Type type = 1;
  string account = 2;
  string password = 3;
}

message LoginResp {
  ResultType result_type = 1;
  User user = 2;
}

// 退出 
// [post] /fetchLogoutStatus

message LogoutReq {
  int32 user_id = 1;
}

message LogoutResp {
  ResultType result_type = 1;
}

// 注册
// [post] /addUser

message SignUpReq {
  string phone = 1;
  string password = 2;
  string email = 3;
}

message SignUpResp {
  ResultType result_type = 1;
  User user = 2;
}